Re-did sass components, fixed the login bug (hack fix)

--- a/src/index.html
+++ b/src/index.html
@@ -151,13 +151,13 @@
 
               <div class="answer-form">
                 <a href="#" class="answer-form_link">
-                  <svg class="answer-form__icon answer-form__icon--right">
+                  <svg class="icon icon--card icon--card-right icon--right">
                     <use href="img/sprite.svg#icon-check"></use>
                   </svg>
                 </a>
 
                 <a href="#" class="answer-form_link">
-                  <svg class="answer-form__icon answer-form__icon--wrong">
+                  <svg class="icon icon--card icon--card-left icon--wrong">
                     <use href="img/sprite.svg#icon-circle-with-cross"></use>
                   </svg>
                 </a>
@@ -177,13 +177,13 @@
 
               <div class="answer-form">
                 <a href="#" class="answer-form_link">
-                  <svg class="answer-form__icon answer-form__icon--right">
+                  <svg class="icon icon--card icon--card-right icon--right">
                     <use href="img/sprite.svg#icon-check"></use>
                   </svg>
                 </a>
 
                 <a href="#" class="answer-form_link">
-                  <svg class="answer-form__icon answer-form__icon--wrong">
+                  <svg class="icon icon--card icon--card-left icon--wrong">
                     <use href="img/sprite.svg#icon-circle-with-cross"></use>
                   </svg>
                 </a>
@@ -215,7 +215,7 @@
 
               <div class="make-card__group make-card--right">
                 <a href="#" class="make-card__link">
-                  <svg class="make-card__icon make-card__icon--right">
+                  <svg class="icon icon--make-card icon--make-card-right icon--right">
                     <use href="img/SVG/check.svg"></use>
                   </svg>
                 </a>
@@ -224,7 +224,7 @@
 
               <div class="make-card__group make-card--wrong">
                 <a href="#" class="make-card__link">
-                  <svg class="make-card__icon make-card__icon--wrong">
+                  <svg class="icon icon--make-card icon--make-card-left icon-left icon--wrong">
                     <use href="img/SVG/circle-with-cross.svg"></use>
                   </svg>
                 </a>
