User can create cards

--- a/src/index.html
+++ b/src/index.html
@@ -190,23 +190,22 @@
               </div>
             </div> -->
 
-            <div class="make-card-grid">
-              <div class="card">
+
+
+            <!-- MAKE CARD -->
+            <!-- <div class="make-card-grid">
+              <div class="card card--make">
                 <div class="card__details">
                   <span class="name">What is a Question?</span>
                 </div>
               </div>
 
               <form action="#" class="make-card__form">
-                <!-- <div class="make-card-group"> -->
                   <label for="question" class="make-card__label">Enter Your Question</label>
-                  <textarea id="question" class="make-card__textarea make-card__textarea" wrap="off" minlength="5" maxlength="250" placeholder="Enter your question" required="true" spellcheck="true"></textarea>
-                <!-- </div> -->
+                  <textarea id="question" class="make-card__textarea  textarea-q" wrap="off" minlength="5" maxlength="250" placeholder="Enter your question" required="true" spellcheck="true"></textarea>
                 
-                <!-- <div class="make-card__group"> -->
                   <label for="answer" class="make-card__label">Enter Your Answer</label>
-                  <textarea id="answer" class="make-card__textarea" wrap="off" minlength="5" maxlength="250" placeholder="Enter your answer" required="true" spellcheck="true"></textarea>
-                <!-- </div> -->                
+                  <textarea id="answer" class="make-card__textarea textarea-a" wrap="off" minlength="5" maxlength="250" placeholder="Enter your answer" required="true" spellcheck="true"></textarea>
               </form>
 
               <div class="make-card__group make-card--switch">
@@ -230,19 +229,14 @@
                 </a>
                 <span class="make-card__span">Let's Stop!</span>
               </div>
-            </div>
+            </div> -->
+
+
+          <!-- END OF OVERVIEW -->
           </div>
-
-          <!-- <div class="paginate">
-            <a href="#" class="paginate__next">
-              <svg class="paginate__icon">
-                <use href="img/sprite.svg#icon-chevron-thin-left"></use>
-              </svg>
-              <span>Next</span>
-            </a>
-          </div> -->
-
+        <!-- END OF CONTENT -->
         </div>
+      <!-- END OF CONTAINER -->
       </div>
     </div>
     <script src="./js/index.js"></script>
