--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
               </a>
             </li>
 
-            <li class="side-nav__item side-nav__item">
+            <li class="side-nav__item side-nav__item side-nav-deck">
               <a href="#" class="side-nav__link">
                 <svg class="side-nav__icon">
                   <use href="img/SVG/drive.svg"></use>
