--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,18 @@
   <body>
     <!-- Alert -->
     <!-- <div class="alert alert-type--error">Incorrect email or password <a href="#" class="cross">&Cross;</a></div> -->
+
+    <!-- WINDOW -->
+    <!-- <div class="window__content">
+      <div class="window__ok">
+        Yes, please delete it
+      </div>
+
+      <div class="window__cancel">
+        No, I want to cancel
+      </div>
+    </div> -->
+
     <div class="container">
       <header class="header">
         <!-- <img src="img/logo.webp" alt="Studently logo" class="logo" /> -->
@@ -255,6 +267,46 @@
               </div>
             </div> -->
 
+            <!-- UPDATE CARDS -->
+             <!-- <div class="make-card-grid">
+              <div class="card card--make">
+                <div class="card__details">
+                  <span class="name">What is a Question?</span>
+                </div>
+              </div>
+
+              <form action="#" class="make-card__form">
+                  <label for="question" class="make-card__label">Enter Your Question</label>
+                  <textarea id="question" class="make-card__textarea  textarea-q" wrap="off" minlength="5" maxlength="250" placeholder="Enter your question" required="true" spellcheck="true"></textarea>
+                
+                  <label for="answer" class="make-card__label">Enter Your Answer</label>
+                  <textarea id="answer" class="make-card__textarea textarea-a" wrap="off" minlength="5" maxlength="250" placeholder="Enter your answer" required="true" spellcheck="true"></textarea>
+              </form>
+
+              <div class="make-card__group make-card--switch">
+                <a href="#" class="make-card__switch btn btn--switch">Turn Over</a>
+              </div>
+
+              <div class="make-card__group make-card--right">
+                <a href="#" class="make-card__link">
+                  <svg class="icon icon--make-card icon--make-card-right icon--right">
+                    <use href="img/SVG/check.svg"></use>
+                  </svg>
+                </a>
+                <span class="make-card__span">Update The Card</span>
+              </div>
+
+              <div class="make-card__group make-card--wrong">
+                <a href="#" class="make-card__link">
+                  <svg class="icon icon--make-card icon--make-card-left icon-left icon--wrong">
+                    <use href="img/SVG/circle-with-cross.svg"></use>
+                  </svg>
+                </a>
+                <span class="make-card__span">Let's Stop!</span>
+              </div>
+            </div> -->
+
+
             <!-- MY DECKS-->
             <!--
             <div class="make-deck">
@@ -416,6 +468,8 @@
               </div>
             </div>-->
 
+
+        
             <!-- END OF OVERVIEW -->
           </div>
           <!-- END OF CONTENT -->
