--- a/src/index.html
+++ b/src/index.html
@@ -140,12 +140,19 @@
           </div> -->
 
           <!-- CARDS -->
-          <!-- <div class="make-card">
+          <div class="make-card">
             <a href="#" class="btn btn--ghost">Make A New Card</a>
           </div>
 
           <div class="card-grid">
-            <div class="card">
+            <div class="no-cards">
+                <svg class="side-nav__icon">
+                  <use href="img/SVG/documents.svg"></use>
+                </svg>
+                <span>You don't have any cards, make some cards to see them here</span>
+            </div>
+
+            <!-- <div class="card">
               <div class="card__options">
                 <a href="#" class="options options--edit">
                   <svg class="icon icon--options icon--edit">
@@ -225,8 +232,8 @@
                     <use href="img/sprite.svg#icon-circle-with-cross"></use>
                   </svg>
                 </a>
-              </div>
-            </div> -->
+              </div> -->
+            </div>
 
             <!-- MAKE CARD -->
             <!-- <div class="make-card-grid">
@@ -268,7 +275,7 @@
             </div> -->
 
             <!-- UPDATE CARDS -->
-             <!-- <div class="make-card-grid">
+            <!-- <div class="make-card-grid">
               <div class="card card--make">
                 <div class="card__details">
                   <span class="name">What is a Question?</span>
@@ -305,7 +312,6 @@
                 <span class="make-card__span">Let's Stop!</span>
               </div>
             </div> -->
-
 
             <!-- MY DECKS-->
             <!--
@@ -468,8 +474,6 @@
               </div>
             </div>-->
 
-
-        
             <!-- END OF OVERVIEW -->
           </div>
           <!-- END OF CONTENT -->
