Sidebar nav now renders active onto an item that is clicked

--- a/src/index.html
+++ b/src/index.html
@@ -140,19 +140,19 @@
           </div> -->
 
           <!-- CARDS -->
-          <div class="make-card">
+          <!-- <div class="make-card">
             <a href="#" class="btn btn--ghost">Make A New Card</a>
           </div>
 
           <div class="card-grid">
-            <div class="no-cards">
-                <svg class="side-nav__icon">
+            <div class="no-item">
+                <svg class="icon icon--no-card">
                   <use href="img/SVG/documents.svg"></use>
                 </svg>
-                <span>You don't have any cards, make some cards to see them here</span>
+                <span>make some cards to see them here!</span>
             </div>
 
-            <!-- <div class="card">
+            <div class="card">
               <div class="card__options">
                 <a href="#" class="options options--edit">
                   <svg class="icon icon--options icon--edit">
@@ -232,8 +232,8 @@
                     <use href="img/sprite.svg#icon-circle-with-cross"></use>
                   </svg>
                 </a>
-              </div> -->
-            </div>
+              </div>
+            </div> -->
 
             <!-- MAKE CARD -->
             <!-- <div class="make-card-grid">
