--- a/src/index.html
+++ b/src/index.html
@@ -338,14 +338,128 @@
             -->
 
             <!-- MAKE DECKS -->
-            <!--<div class="make-deck-grid">
+            <div class="make-deck-grid">
 
               <form action="#" class="make-deck__form">
                   <label for="deck-name" class="make-deck__label">Enter Deck name</label>
-                  <textarea id="deck-name" class="make-deck__textarea  textarea-q" wrap="off" minlength="5" maxlength="250" placeholder="Enter your deck name" required="true" spellcheck="true"></textarea>
+                  <input class="make-deck__input" type="text" minlength="5" maxlength="50" id="deck-name" placeholder="Deck Name">
               </form>
 
-              <div class="make-deck__group make-deck--right">
+              <div class="make-deck__card-nav make-deck__card-nav--user-cards">
+                <span class="make-deck__name">My Cards</span>
+                <ul class="make-deck__list">
+                  <li class="make-deck__item">
+                    <a href="#" class="make-deck__link">
+                      <svg class="icon icon__make-deck--card">
+                        <use href="img/SVG/plus.svg"></use>
+                      </svg>
+                      <div class="make-deck__card-details">
+                        <span class="make-deck__span make-deck-span--question">ipsum lorem ipsum dolor sit amet ipsum lorem ipsum dolor sit amet ipsum lorem ipsum dolor sit amet ipsum lorem ipsum dolor sit amet</span>
+                      <span class="make-deck__span make-deck-span--answer">Card Answer</span>
+                      </div>
+                    </a>
+                  </li>
+
+                  <li class="make-deck__item">
+                    <a href="#" class="make-deck__link">
+                      <svg class="icon icon__make-deck--card">
+                        <use href="img/SVG/plus.svg"></use>
+                      </svg>
+                      <div class="make-deck__card-details">
+                        <span class="make-deck__span make-deck-span--question">Card Question</span>
+                      <span class="make-deck__span make-deck-span--answer">Card Answer</span>
+                      </div>
+                    </a>
+                  </li>
+
+                  <li class="make-deck__item">
+                    <a href="#" class="make-deck__link">
+                      <svg class="icon icon__make-deck--card">
+                        <use href="img/SVG/plus.svg"></use>
+                      </svg>
+                      <div class="make-deck__card-details">
+                        <span class="make-deck__span make-deck-span--question">Card Question</span>
+                      <span class="make-deck__span make-deck-span--answer">Card Answer</span>
+                      </div>
+                    </a>
+                  </li>
+
+                  <li class="make-deck__item">
+                    <a href="#" class="make-deck__link">
+                      <svg class="icon icon__make-deck--card">
+                        <use href="img/SVG/plus.svg"></use>
+                      </svg>
+                      <div class="make-deck__card-details">
+                        <span class="make-deck__span make-deck-span--question">Card Question</span>
+                      <span class="make-deck__span make-deck-span--answer">Card Answer</span>
+                      </div>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+
+              <div class="make-deck__card-nav make-deck__card-nav--deck-cards">
+                <span class="make-deck__name">Deck Cards</span>
+                <ul class="make-deck__list">
+                  <li class="make-deck__item">
+
+                    <a href="#" class="make-deck__link">
+                      <svg class="icon icon__make-deck--card">
+                        <use href="img/SVG/minus.svg"></use>
+                      </svg>
+                      <div class="make-deck__card-details">
+                        <span class="make-deck__span make-deck-span--question">What is the speed of light?</span>
+                      <span class="make-deck__span make-deck-span--answer">300,000 m/s-1</span>
+                      </div>
+                    </a>
+                  </li>
+
+                  <li class="make-deck__item">
+                    <a href="#" class="make-deck__link">
+                      <svg class="icon icon__make-deck--card">
+                        <use href="img/SVG/minus.svg"></use>
+                      </svg>
+                      <div class="make-deck__card-details">
+                        <span class="make-deck__span make-deck-span--question">Card Question</span>
+                      <span class="make-deck__span make-deck-span--answer">Card Answer</span>
+                      </div>
+                    </a>
+                  </li>
+
+                  <li class="make-deck__item">
+                    <a href="#" class="make-deck__link">
+                      <svg class="icon icon__make-deck--card">
+                        <use href="img/SVG/minus.svg"></use>
+                      </svg>
+                      <div class="make-deck__card-details">
+                        <span class="make-deck__span make-deck-span--question">Card Question</span>
+                      <span class="make-deck__span make-deck-span--answer">Card Answer</span>
+                      </div>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+
+              <div class="card card--make make-deck__card">
+                <div class="card__options">
+                  <a href="#" class="options options--add">
+                    <svg class="icon icon--options icon--add">
+                      <use xlink:href="img/SVG/plus.svg"></use>
+                    </svg>
+                    <span class="show-hide card--edit">Add card</span>
+                  </a>
+  
+                </div>
+
+                <div class="card__details">
+                  <span class="name">What is a Question?</span>
+                </div>
+              </div>
+
+              <div class="make-deck__group make-deck--switch">
+                <a href="#" class="make-deck__switch btn btn--switch">Turn Over</a>
+              </div>
+              <!-- <div class="make-deck__group make-deck--right">
                 <a href="#" class="make-deck__link">
                   <svg class="icon icon--make-deck icon--make-card-right icon--right">
                     <use href="img/SVG/check.svg"></use>
@@ -361,8 +475,8 @@
                   </svg>
                 </a>
                 <span class="make-deck__span">Let's Stop!</span>
-              </div>
-            </div>-->
+              </div> -->
+            </div>
 
             <!--CLASSROOM-->
             <!--<div class="make-classroom">
