--- a/src/index.html
+++ b/src/index.html
@@ -338,7 +338,7 @@
             -->
 
             <!-- MAKE DECKS -->
-            <div class="make-deck-grid">
+            <!-- <div class="make-deck-grid">
 
               <form action="#" class="make-deck__form">
                   <label for="deck-name" class="make-deck__label">Enter Deck name</label>
@@ -440,7 +440,8 @@
                 </ul>
               </div>
 
-              <div class="card card--make make-deck__card">
+              <div class="make-deck__card-switch">
+                <div class="card card--make make-deck__card">
                 <div class="card__options">
                   <a href="#" class="options options--add">
                     <svg class="icon icon--options icon--add">
@@ -454,29 +455,35 @@
                 <div class="card__details">
                   <span class="name">What is a Question?</span>
                 </div>
-              </div>
+                </div>
 
-              <div class="make-deck__group make-deck--switch">
-                <a href="#" class="make-deck__switch btn btn--switch">Turn Over</a>
+                <div class="make-deck__group make-deck--switch">
+                  <a href="#" class="make-deck__switch btn btn--switch">Turn Over</a>
+                </div>
               </div>
-              <!-- <div class="make-deck__group make-deck--right">
-                <a href="#" class="make-deck__link">
-                  <svg class="icon icon--make-deck icon--make-card-right icon--right">
-                    <use href="img/SVG/check.svg"></use>
-                  </svg>
-                </a>
-                <span class="make-deck__span">Create The Deck</span>
-              </div>
+              
+              <div class="make-deck__options">
+                <div class="make-deck__group make-deck--right">
+                  <a href="#" class="make-deck__link">
+                    <svg class="icon icon--make-deck icon--make-card-right icon--right">
+                      <use href="img/SVG/check.svg"></use>
+                    </svg>
+                  </a>
+                  <span class="make-deck__span">Create The Deck</span>
+                </div>
 
-              <div class="make-deck__group make-deck--wrong">
-                <a href="#" class="make-deck__link">
-                  <svg class="icon icon--make-deck icon--make-deck-left icon-left icon--wrong">
-                    <use href="img/SVG/circle-with-cross.svg"></use>
-                  </svg>
-                </a>
-                <span class="make-deck__span">Let's Stop!</span>
-              </div> -->
-            </div>
+                <div class="make-deck__group make-deck--wrong">
+                  <a href="#" class="make-deck__link">
+                    <svg class="icon icon--make-deck icon--make-deck-left icon-left icon--wrong">
+                      <use href="img/SVG/circle-with-cross.svg"></use>
+                    </svg>
+                  </a>
+                  <span class="make-deck__span">Let's Stop!</span>
+                </div>
+              </div>
+              
+
+            </div> -->
 
             <!--CLASSROOM-->
             <!--<div class="make-classroom">
