Pagination template WIP

--- a/src/index.html
+++ b/src/index.html
@@ -338,7 +338,7 @@
             -->
 
             <!-- MAKE DECKS -->
-            <!-- <div class="make-deck-grid">
+            <div class="make-deck-grid">
 
               <form action="#" class="make-deck__form">
                   <label for="deck-name" class="make-deck__label">Enter Deck name</label>
@@ -396,6 +396,22 @@
                     </a>
                   </li>
                 </ul>
+
+                <div class="make-deck__paginate">
+                  <button class="btn--inline btn__search btn__search--next" data-goto="1">
+                    <span>Page 1</span>
+                    <svg class="icon icon__search icon__search--next">
+                      <use href="img/SVG/chevron-thin-left.svg"></use>
+                    </svg>
+                  </button>
+
+                  <button class="btn--inline btn__search btn__search--prev" data-goto="4">
+                    <span>Page 4</span>
+                    <svg class="icon icon__search icon__search--prev">
+                      <use href="img/SVG/chevron-thin-right.svg"></use>
+                    </svg>
+                  </button>
+                </div>
               </div>
 
               <div class="make-deck__card-nav make-deck__card-nav--deck-cards">
@@ -483,7 +499,7 @@
               </div>
               
 
-            </div> -->
+            </div>
 
             <!--CLASSROOM-->
             <!--<div class="make-classroom">
