Make a Deck has been created, you can post a deck and you can view it, I will work on refining and refactoring the code, fixing UI bugs

--- a/src/index.html
+++ b/src/index.html
@@ -338,7 +338,7 @@
             -->
 
             <!-- MAKE DECKS -->
-            <div class="make-deck-grid">
+            <!-- <div class="make-deck-grid">
 
               <form action="#" class="make-deck__form">
                   <label for="deck-name" class="make-deck__label">Enter Deck name</label>
@@ -499,7 +499,7 @@
               </div>
               
 
-            </div>
+            </div> -->
 
             <!--CLASSROOM-->
             <!--<div class="make-classroom">
