FIXMEs added in classController

--- a/src/index.html
+++ b/src/index.html
@@ -314,12 +314,28 @@
             </div> -->
 
             <!-- MY DECKS-->
-            <!--
-            <div class="make-deck">
+            
+            <!-- <div class="make-deck">
               <a href="#" class="btn btn--ghost">Make A New Deck</a>
             </div>
             <div class="deck-grid">
               <div class="deck">
+                <div class="card__options">
+                  <a href="#" class="options options--edit">
+                    <svg class="icon icon--options icon--edit">
+                      <use xlink:href="img/SVG/edit.svg"></use>
+                    </svg>
+                    <span class="show-hide card--edit">Edit</span>
+                  </a>
+  
+                  <a href="#" class="options options--delete">
+                    <svg class="icon icon--options icon--delete">
+                      <use xlink:href="img/SVG/trash.svg"></use>
+                    </svg>
+                    <span class="show-hide card--delete">Delete</span>
+                  </a>
+                </div>
+
                 <div class="deck__details">
                   <span class="name">Deck 1</span>
                 </div>
@@ -334,8 +350,8 @@
                   <span class="name">Deck 3</span>
                 </div>
               </div>
-            </div>
-            -->
+            </div> -->
+           
 
             <!-- MAKE DECKS -->
             <!--<div class="make-deck-grid">
