Delete and Update Deck implemented and tested, get and view classroom now working

--- a/src/index.html
+++ b/src/index.html
@@ -518,7 +518,7 @@
             </div> -->
 
             <!--CLASSROOM-->
-            <!--<div class="make-classroom">
+            <div class="make-classroom">
               <a href="#" class="btn btn--ghost">Make A New Classroom</a>
             </div>
             <div class="classroom-grid">
@@ -538,7 +538,7 @@
                 </div>
               </div>
             </div>
-            -->
+           
 
             <!-- MAKE CLASSROOM -->
             <!--<div class="make-classroom-grid">
