CRUD for Classroom, Deck and Card done and checked

--- a/src/index.html
+++ b/src/index.html
@@ -673,7 +673,7 @@
           </div> -->
 
             <!-- MAKE CLASSROOM -->
-            <div class="make-classroom-grid">
+            <!-- <div class="make-classroom-grid">
 
               <form action="#" class="make-classroom__form">
                   <label for="classroom-name" class="make-classroom__label">Enter Classroom name</label>
@@ -939,7 +939,9 @@
               </div>
               </div>
 
-            </div>
+            </div> -->
+
+            
               
 
             <!-- END OF OVERVIEW -->
